Log a warning if Modular Java (version 9 and newer) is used to run Hazelcast without providing proper access to internal Java API.