@@ -1038,6 +1038,7 @@
                              -->
                             <argLine>
                                 ${vmHeapSettings}
+                                --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                                 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                                 --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-opens java.base/java.lang=ALL-UNNAMED
